# Dynamic-Pricing-Engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
docs/: 00-index.md  01-introduction.md  02-problem-statement.md  03-objectives.md  04-algorithm-explanation.md  05-mathematical-model.md  06-pseudocode.md  07-flowchart.md  08-complexity-analysis.md  09-correctness-and-convergence.md  10-advantages-limitations-future.md  11-sample-runs.md  12-function-reference.md
include/: EpsilonGreedyBandit.hpp  MarketSimulator.hpp  PriceArm.hpp  PricingEngine.hpp  SimulationConfig.hpp
sort-algo/: sort_algorithms.hpp
src/: EpsilonGreedyBandit.cpp  MarketSimulator.cpp  PricingEngine.cpp  main.cpp
